Added Documentation and code clean-up.
To Do:
Fix Graph screen bugs;
Fix date change bugs;
Fix Borough-View table style;
Write JUnit Tests;
Finish report.